# HybridRendering

SurfaceRendering/: ControlPoints.cpp  ControlPoints.h  ImageProcessing.cpp  ImageProcessing.h  Morphing.cpp  Morphing.h  Read_RAW_3DArray.m  Read_RAW_Header.m  Regularization.cpp  Regularization.h  Segmentation.cpp  Segmentation.h  SurfaceRendering.sln  SurfaceRendering.vcxproj  SurfaceRendering.vcxproj.filters  construct_DAT_blockID.asv  construct_DAT_blockID.m  exr2mesh.m  input.cpp  input.h  main.cpp  segmentation.m
SurfaceRendering/HDRITools-0.4.0/: test.exr  vol.exr
SurfaceRendering/Output/: gabardine_tiled_single_voxel.exr  gabardine_tiled_single_voxel.xml  height.xml  heightmap.exr  heightmap.xml  heterogeneous2.xml  obj.exr  obj.xml  regularized.exr  regularized_manually.exr  regularized_mesh.exr  regularized_mesh.serialized  residual.exr  residual_negative.exr  vol.exr  vol.xml
SurfaceRendering/Output_backup/: height_damask.exr  height_damask.xml  height_damask_exr.exr  heightmap.xml  obj.xml  regularized_mesh.xml  residual.exr  residual_manually.exr
SurfaceRendering/Shellmap/: MeshHelper.cpp  MeshHelper.h  tetra.h  tetra2.h
SurfaceRendering/inmin/: Makefile.am  Makefile.in  eigen_lm.cc  eigen_qo.cc  eigen_qo.hpp  eigen_utils.hpp  inmin_compile.cc  inmin_compile.h  inmin_compile_stubs.cc  inmin_lm.cc  inmin_lm.h  inmin_mon.cc  inmin_mon.h  inmin_nested.cc  inmin_nested.h
SurfaceRendering/inmin/bnmin1/: Makefile.am  Makefile.in  markovchain.cc  markovchain.h  mcpoint.cc  mcpoint.h  nestedinitial.cc  nestedinitial.h  nestedsampler.cc  nestedsampler.h  prior_sampler.cc  prior_sampler.h
(+309 files in other folders)
